syntax = "proto3";
package blob;

import "gogoproto/gogo.proto";

option go_package = "github.com/celestiaorg/celestia-app/x/blob/types";

message EventPayForBlob {
  string signer = 1;
  uint64 blob_size = 2;
}